add pages and dropdown menu

--- a/elijah.html
+++ b/elijah.html
@@ -8,6 +8,12 @@
     <title>Elijah</title>
 </head>
 <body>
+    <div class="dropdown">
+        <span>different pages</span>
+        <div class="dropdown-content">
+          <p>Hello World!</p>
+        </div>
+      </div>
     <div >
         <div class="ch-stats">
         <span>Strength</span>
